--- a/WCFClientDecrypt/WCFClientDecrypt/MainWindow.xaml
+++ b/WCFClientDecrypt/WCFClientDecrypt/MainWindow.xaml
@@ -24,7 +24,8 @@
         <Label x:Name="labelUsername" HorizontalAlignment="Left" Height="30" Margin="100,20,0,0" VerticalAlignment="Top" Width="150" BorderThickness="1" BorderBrush="Black" d:IsHidden="True"/>
         <Label x:Name="labelFilesSelect" Content="Select Files" HorizontalAlignment="Center" Margin="0,80,450,0" VerticalAlignment="Top" FontSize="14" d:IsHidden="True"/>
         <ListBox x:Name="listFiles" HorizontalAlignment="Center" Height="150" Margin="0,0,300,0" VerticalAlignment="Center" Width="230" Grid.Column="2" SelectionMode="Multiple" d:IsHidden="True"/>
-        <Button x:Name="decryptButton" Content="Decrypt" HorizontalAlignment="Center" Height="34" Margin="0,200,150,0" VerticalAlignment="Center" Width="90" Click="DecryptButton_Click" d:IsHidden="True"/>
+        <Button x:Name="UpdateButton" Content="Update" HorizontalAlignment="Center" Margin="0,200,430,0" VerticalAlignment="Center" Width="90" Height="30" Click="UpdateButton_Click" d:IsHidden="True"/>
+        <Button x:Name="decryptButton" Content="Decrypt" HorizontalAlignment="Center" Height="30" Margin="0,200,150,0" VerticalAlignment="Center" Width="90" Click="DecryptButton_Click" d:IsHidden="True"/>
         <Label x:Name="labelResult" Content="Result" HorizontalAlignment="Center" Margin="100,80,0,0" VerticalAlignment="Top" FontSize="14" d:IsHidden="True"/>
         <TextBlock x:Name="ResultBlock" HorizontalAlignment="Center" Height="150" Margin="300,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="230" IsEnabled="False" d:IsHidden="True"/>
         <Button x:Name="LogoutButton" Content="Logout" HorizontalAlignment="Right" Margin="0,20,20,0" VerticalAlignment="Top" Width="75" Click="LogoutButton_Click" d:IsHidden="True"/>
@@ -34,6 +35,8 @@
             <TextBox x:Name="InfoPanelBox" Margin="10" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" d:IsHidden="True"/>
             <Button x:Name="InfoButton" Content="OK" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="50" Height="20" Click="InfoButton_Click" d:IsHidden="True" />
         </StackPanel>
+        <Button x:Name="registerPass" Content="RegisterPass" HorizontalAlignment="Left" Margin="459,375,0,0" VerticalAlignment="Top" Width="75" Click="RegisterPass_Click"/>
+        <Button x:Name="DecryptPass" Content="DecryptPass" HorizontalAlignment="Left" Margin="596,375,0,0" VerticalAlignment="Top" Width="75" Click="DecryptPass_Click"/>
 
 
     </Grid>
