--- a/WCFClientDecrypt/WCFClientDecrypt/MainWindow.xaml
+++ b/WCFClientDecrypt/WCFClientDecrypt/MainWindow.xaml
@@ -27,12 +27,14 @@
         <Button x:Name="UpdateButton" Content="Update" HorizontalAlignment="Center" Margin="0,200,430,0" VerticalAlignment="Center" Width="90" Height="30" Click="UpdateButton_Click" d:IsHidden="True"/>
         <Button x:Name="decryptButton" Content="Decrypt" HorizontalAlignment="Center" Height="30" Margin="0,200,150,0" VerticalAlignment="Center" Width="90" Click="DecryptButton_Click" d:IsHidden="True"/>
         <Label x:Name="labelResult" Content="Result" HorizontalAlignment="Center" Margin="100,80,0,0" VerticalAlignment="Top" FontSize="14" d:IsHidden="True"/>
-        <TextBlock x:Name="ResultBlock" HorizontalAlignment="Center" Height="150" Margin="300,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="230" IsEnabled="False" d:IsHidden="True"/>
+        <ScrollViewer x:Name="ResultScroll" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" HorizontalAlignment="Center" VerticalAlignment="Center" Width="230" Height="150" Margin="300,0,0,0" Foreground="{x:Null}" d:IsHidden="True">
+            <TextBlock x:Name="ResultBlock" Margin="0,0,0,0" TextWrapping="Wrap" IsEnabled="False" Background="White" Foreground="Black" d:IsHidden="True"/>
+        </ScrollViewer>
         <Button x:Name="LogoutButton" Content="Logout" HorizontalAlignment="Right" Margin="0,20,20,0" VerticalAlignment="Top" Width="75" Click="LogoutButton_Click" d:IsHidden="True"/>
         <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="10,386,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" d:IsHidden="True"/>
         <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="148,386,0,0" VerticalAlignment="Top" Width="75" Click="OnClick1" d:IsHidden="True"/>
         <StackPanel x:Name="InfoPanel" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center" d:IsHidden="True" Background="Gray">
-            <TextBox x:Name="InfoPanelBox" Margin="10" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" d:IsHidden="True" IsReadOnly="True" MaxWidth="200" TextWrapping="Wrap"/>
+            <TextBox x:Name="InfoPanelBox" Margin="10" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" d:IsHidden="True" IsReadOnly="True" MaxWidth="200" TextWrapping="Wrap" MaxHeight="350" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True" />
             <Button x:Name="InfoButton" Content="OK" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="50" Height="20" Click="InfoButton_Click" d:IsHidden="True" />
         </StackPanel>
         <Button x:Name="registerPass" Content="RegisterPass" HorizontalAlignment="Left" Margin="459,375,0,0" VerticalAlignment="Top" Width="75" Click="RegisterPass_Click"/>
